--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat;
-  height: 120vh; 
+  /* height: 2000vh;  */
   background-color: black;
   overflow: hidden;
   
