--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,23 @@
     transform: rotate(360deg);
   }
 }
+
+
+body {
+  margin: 0;
+  padding: 0;
+  opacity: 0;
+  animation: fadeInAnimation ease 2s;
+  animation-fill-mode: forwards;
+}
+
+
+
+@keyframes fadeInAnimation {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
+}
